overlays/prod/patch-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  template:
    spec:
      containers:
        - name: frontend
          image: rociomagnoni/atales-frontend1:prod-bf1713d
